--- a/DxfToBmp/DxfToBmp.vbproj
+++ b/DxfToBmp/DxfToBmp.vbproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Reference Include="netDxf, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\netDxf.dll</HintPath>
+      <HintPath>..\..\..\netDxf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
